--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "eslint-config-prettier": "^8.6.0",
+    "rangeslider.js": "^2.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
