Adds config options

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 VITE_FEATURE_YEARLY_RATE=9.9
+VITE_FEATURE_MIN_LENGTH=2
+VITE_FEATURE_MAX_LENGTH=10
+VITE_FEATURE_STEP_LENGTH=1
+VITE_FEATURE_DEFAULT_LENGTH=6
+VITE_FEATURE_MIN_AMOUNT=20000
+VITE_FEATURE_MAX_AMOUNT=200000
+VITE_FEATURE_STEP_AMOUNT=10000
+VITE_FEATURE_DEFAULT_AMOUNT=100000
